Added fortune holder

--- a/src/main/resources/assets/fortuneblocks/lang/en_US.lang
+++ b/src/main/resources/assets/fortuneblocks/lang/en_US.lang
@@ -1,2 +1,6 @@
+# Item
+item.fortuneblocks:fortuneHolder.name=Fortune Holder
+
 # Tooltips
 fortuneblocks.tooltip.extfortune=Extra Fortune: %s
+fortuneblocks.tooltip.holdShift=Hold &5Shift&7 for more information
